--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 body{
-    max-width: 800px;
+    max-width: 80%;
     justify-content: center;
 }
-.img{
-    width: 20px;
-    height: 20px;
+h1{
+    text-align: center;
 }
-.h1{
-    justify-content: center;
+div>img{
+    width: 400px;
+}
+
+.container{
+    width: auto;
 }
